--- a/publications.html
+++ b/publications.html
@@ -135,17 +135,6 @@
 	</td></tr>
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>Innovative Healthcare Solutions: Robust Hand Gesture Recognition of Daily Life Routines Using 1D CNN.</i> Mudawi, N. A., Ansar, H., Alazeb, A., Aljuaid, H., Alqahtani, Y., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Bioengineering and Biotechnology.<br>
-		<!--
-		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
-	-->
-	</td></tr>
-	<tr><td>
-		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>A Robust Multimodal Detection: Physical Exercise Monitoring in Long-Term Care Environments.</i> Mudawi, N. A., Batool M., Alazeb A., Alqahtani Y., Alqahtani Y., Almujally, N. A., Algarni A., Algarni A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Bioengineering and Biotechnology.<br>
 		<!--
 		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -155,9 +144,8 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 	-->
 	</td></tr>
-
 	<tr><td>
-		<img src="images/Hot.png" height="15" class = "pop1"> (top 0.1%)　and <img src="images/Highly.png" height="15" class = "pop1"> (top 1%) in Engineering (<img src="images/WoS.png" height="15" class = "pop1">)<br>
+		<img src="images/Hot.png" height="15" class = "pop1"> (top 0.1%)　and <img src="images/Highly.png" height="15" class = "pop1"> (top 1%) in Engineering on <img src="images/WoS.png" height="15" class = "pop1"><br>
 		<i>Efficient Wi-Fi-Based Human Activity Recognition Using Adaptive Antenna Elimination.</i> Jannat, M.K.A., Islam, M.S., Yang, S-H*, and Liu, H.* (2023). IEEE Access, 11:105440-105454.<br>
 		<a href="https://scholar.google.com/scholar?q=Efficient+Wi-Fi-Based+Human+Activity+Recognition+Using+Adaptive+Antenna+Elimination" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Efficient-Wi-Fi-Based-Human-Activity-Recognition-Jannat-Islam/02ff217d1dd6316596fc1da4b8f6a107ee5b7f06" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -167,7 +155,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2023.3320069" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2023.3320069</a>
 	</td></tr>
 	<tr><td>
-		<img src="images/Highly.png" height="15" class = "pop1"> (top 1%) in Engineering (<img src="images/WoS.png" height="15" class = "pop1">)<br>
+		<img src="images/Highly.png" height="15" class = "pop1"> (top 1%) in Engineering on <img src="images/WoS.png" height="15" class = "pop1"><br>
 		<i>MS2OD: Outlier Detection Using Minimum Spanning Tree and Medoid Selection.</i> Li, J., Li, JW, Wang, C., Verbeek F. J.*, Schultz, T., and Liu, H.* (2024). Machine Learning: Science and Technology, 5:015025. IOPscience.<br>
 		<a href="https://scholar.google.com/scholar?q=MS2OD%3A+Outlier+Detection+Using+Minimum+Spanning+Tree+and+Medoid+Selection" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/MS2OD%3A-Outlier-Detection-Using-Minimum-Spanning-and-Li-Li/9f2f5a172ec1f1cbd22e522c336282010beeb283" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -177,7 +165,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1088/2632-2153/ad2492" target="_blank" rel="noopener noreferrer">10.1088/2632-2153/ad2492</a>
 	</td></tr>
 	<tr><td>
-		<img src="images/Highly.png" height="15" class = "pop1"> (top 1%) in Engineering (<img src="images/WoS.png" height="15" class = "pop1">)<br>
+		<img src="images/Highly.png" height="15" class = "pop1"> (top 1%) in Engineering on <img src="images/WoS.png" height="15" class = "pop1"><br>
 		<i>Taxonomy and Real-Time Classification of Artifacts during Biosignal Acquisition: A Starter Study and Dataset of ECG.</i> Liu, H.*, Zhang, S., Gamboa, H., Xue, T., Zhou, C., and Schultz, T. (2024). IEEE Sensors Journal, 24(6): 9162-9171. <br>
 		<a href="https://scholar.google.com/scholar?q=Taxonomy+and+Real-Time+Classification+of+Artifacts+during+Biosignal+Acquisition%3A+A+Starter+Study+and+Dataset+of+ECG" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Taxonomy-and-Real-Time-Classification-of-Artifacts-Liu-Zhang/e499518389b2b51b5f4b2a41610f7cf7037818be" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -187,7 +175,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/JSEN.2024.3356651" target="_blank" rel="noopener noreferrer">10.1109/JSEN.2024.3356651</a>
 	</td></tr>
 	<tr><td>
-		<img src="images/Highly.png" height="15" class = "pop1"> (top 1%) in Biology & Biochemistry (<img src="images/WoS.png" height="15" class = "pop1">)<br>
+		<img src="images/Highly.png" height="15" class = "pop1"> (top 1%) in Biology & Biochemistry on <img src="images/WoS.png" height="15" class = "pop1"><br>
 		<i>Robust Human Locomotion and Localization Activity Recognition over Multisensory.</i> Khan, D., Alonazi, M., Abdelhaq, M.*, Mudawi, N. A., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Physiology, 15:1344887.<br>
 		<a href="https://scholar.google.de/scholar?q=Robust+Human+Locomotion+and+Localization+Activity+Recognition+over+Multisensory" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Robust-human-locomotion-and-localization-activity-Khan-Alonazi/bb90b2c6698b935dcc789faab546118be8717927" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -207,9 +195,20 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1038/s41598-024-62990-4" target="_blank" rel="noopener noreferrer">10.1038/s41598-024-62990-4</a>
 	</td></tr>	
 	<tr><td>
+		<i>Innovative Healthcare Solutions: Robust Hand Gesture Recognition of Daily Life Routines Using 1D CNN.</i> Mudawi, N. A., Ansar, H., Alazeb, A., Aljuaid, H., Alqahtani, Y., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Bioengineering and Biotechnology, 12:1401803.<br>
+		<a href="https://scholar.google.com/scholar?q=Innovative+healthcare+solutions%3A+robust+hand+gesture+recognition+of+daily+life+routines+using+1D+CNN" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		<!--
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		-->
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2024.1401803/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=mudawi2024hand_gesture_cnn&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2024.1401803" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2024.1401803</a>
+	</td></tr>
+	<tr><td>
 		<i>Remote Intelligent Perception System for Multi-Object Detection.</i> Alazeb, A., Chughtai, B. R., Mudawi, N. A., Alqahtani, Y., Alonazi, M., Aljuaid, H., Jalal, A.*, and Liu, H.* (2024). Frontiers in Neurorobotics, 18:1398703.<br>
 		<a href="https://scholar.google.com/scholar?q=Remote+intelligent+perception+system+for+multi-object+detection" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Remote-intelligent-perception-system-for-detection-Alazeb-Chughtai/ac27d489678a64b99940afba827eaab3278711fd" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/380720805_Remote_intelligent_perception_system_for_multi-object_detection" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/articles/10.3389/fnbot.2024.1398703/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=alazeb2024remoteMultiobjectDetection&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
@@ -350,6 +349,7 @@
 	-->
 	</td></tr>
 	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>Examining the Effects of Human-Likeness of Avatars on Emotion Perception and Emotion Elicitation.</i> Zhang, S., Faruk, O., Porzel, R., Küster, D., Schultz, T., and Liu, H.* (2024). In ABC 2024 - 6th International Conference on Activity and Behavior Computing. IEEE.<br>
 		<!--
 		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
