--- a/publications.html
+++ b/publications.html
@@ -113,7 +113,7 @@
 	<tr><td><img src="images/Journal.png" height="25"></td></tr>
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>Template-Based Synergy Extrapolation Analysis for Prediction of Muscle Excitations.</i> Li, K., Zhou, C., Wang, D., Chen, Z, Guo, D, Pan, S.*, Liu, H.*, and Ye, X.* (2024). Physiological Measurement. IOPScience.<br>
+		<i>Template-Based Synergy Extrapolation Analysis for Prediction of Muscle Excitations.</i> Li, K., Wang, D., Chen, Z, Guo, D, Pan, S., Liu, H., Zhou, C.*, and Ye, X.* (2024). Physiological Measurement. IOPScience.<br>
 		<!--
 		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -197,10 +197,8 @@
 	<tr><td>
 		<i>Innovative Healthcare Solutions: Robust Hand Gesture Recognition of Daily Life Routines Using 1D CNN.</i> Mudawi, N. A., Ansar, H., Alazeb, A., Aljuaid, H., Alqahtani, Y., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Bioengineering and Biotechnology, 12:1401803.<br>
 		<a href="https://scholar.google.com/scholar?q=Innovative+healthcare+solutions%3A+robust+hand+gesture+recognition+of+daily+life+routines+using+1D+CNN" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		<!--
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		-->
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Innovative-healthcare-solutions%3A-robust-hand-of-1D-Mudawi-Ansar/6ea62f04e69a0ceb72a0a6bce57fa8f321f476e3" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/382741631_Innovative_healthcare_solutions_robust_hand_gesture_recognition_of_daily_life_routines_using_1D_CNN" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2024.1401803/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=mudawi2024hand_gesture_cnn&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2024.1401803" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2024.1401803</a>
