--- a/research.html
+++ b/research.html
@@ -108,17 +108,17 @@
 					<i>Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies – (Volume 1).</i> Guarino, M. P., Hotta, K., Yousef, M., Liu, H., Saggio, G., Fred, A., and Gamboa, H. (2024). INSTICC.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;
 					-->
-					<a href="https://www.researchgate.net/publication/378935961_Proceedings_of_the_17th_International_Joint_Conference_on_Biomedical_Engineering_Systems_and_Technologies_-_Volume_1" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					<a href="https://www.semanticscholar.org/paper/Proceedings-of-the-17th-International-Joint-on-and-Liu-Liu/3e51838ee78dad4fec3b404223b02913a9f3adc5" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/378935961_Proceedings_of_the_17th_International_Joint_Conference_on_Biomedical_Engineering_Systems_and_Technologies_-_Volume_1" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://doi.org/10.5220/0000184700003657" target="_blank" rel="noopener noreferrer"><img src="images/SciTePress.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=biostec2024&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.5220/0000184700003657" target="_blank" rel="noopener noreferrer">10.5220/0000184700003657</a>
 				</td></tr>
 				<tr><td>
 					<i>Sensors for Human Activity Recognition.</i> Liu, H., Gamboa, H., and Schultz, T. (2023). MDPI.<br>
-					<a href="https://scholar.google.com/scholar?q=Sensors+for+Human+Activity+Recognition+H+Liu+H+Gamboa" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					<a href="https://scholar.google.com/scholar?q=Sensors+for+Human+Activity+Recognition+Hui+Liu" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.google.de/books/edition/Sensors_for_Human_Activity_Recognition/jTID0AEACAAJ" target="_blank" rel="noopener noreferrer"><img src="images/GoogleBooks.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.amazon.com/Sensors-Human-Activity-Recognition-Hui/dp/3036575545" target="_blank" rel="noopener noreferrer"><img src="images/Amazon.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/372077993_Sensors_for_Human_Activity_Recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -127,8 +127,9 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/books978-3-0365-7555-1" target="_blank" rel="noopener noreferrer">10.3390/books978-3-0365-7555-1</a>
 				</td></tr>
 				<tr><td>
-					<i>Biosignal processing and activity modeling for multimodal human activity recognition.</i> Liu, H. (2021). PhD thesis, University of Bremen.<br>
+					<i>Biosignal Processing and Activity Modeling for Multimodal Human Activity Recognition.</i> Liu, H. (2021). PhD thesis, University of Bremen.<br>
 					<a href="https://scholar.google.com/scholar?q=Biosignal+Processing+and+Activity+Modeling+for+Multimodal+Human+Activity+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Biosignal-processing-and-activity-modeling-for-Liu/4bc9489c1b9169feeef22a1bda902e3bb18b0ebb" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/356683096_Biosignal_Processing_and_Activity_Modeling_for_Multimodal_Human_Activity_Recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://theses.eurasip.org/theses/911/biosignal-processing-and-activity-modeling-for/" target="_blank" rel="noopener noreferrer"><img src="images/Eurasip.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://media.suub.uni-bremen.de/handle/elib/5492" target="_blank" rel="noopener noreferrer"><img src="images/SuUB.png" height="15"></a>
@@ -188,7 +189,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.springerprofessional.de/bremen-big-data-challenge-2017-predicting-university-cafeteria-l/15121170" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/chapter/10.1007/978-3-319-67190-1_35" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=weiner2017bbdc&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://bbdc.csl.uni-bremen.de/index.php/2017" target="_blank" rel="noopener noreferrer"><img src="images/BBDC2017.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://bbdc.csl.uni-bremen.de/en/" target="_blank" rel="noopener noreferrer"><img src="images/BBDC2017.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1007/978-3-319-67190-1_35" target="_blank" rel="noopener noreferrer">10.1007/978-3-319-67190-1_35</a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/book/10.1007/978-3-319-67190-1" target="_blank" rel="noopener noreferrer"><img src="images/Book.png" height="15"></a>
 				</td></tr>
@@ -207,18 +208,7 @@
 				</td></tr>
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Semantic Segmentation and YOLO Detector over Aerial Vehicle Images.</i> Quresh, A. M., Butt, A. H., Alzazeb, A., Mudawi, N. A., Alonazi, M., Almujally, N. A., Jalal, A., and Liu, H.* (2024).  Computer, Materials & Continua. Tech Science Press.<br>
-					<!--
-					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
-				-->
-				</td></tr>
-				<tr><td>
-					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>A Robust Multimodal Detection: Physical Exercise Monitoring in Long-Term Care Environments.</i> Mudawi, N. A., Batool M., Alazeb A., Alqahtani Y., Alqahtani Y., Almujally, N. A., Algarni A., Algarni A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Bioengineering and Biotechnology.<br>
+					<i>Semantic Segmentation and YOLO Detector over Aerial Vehicle Images.</i> Quresh, A. M., Butt, A. H., Alzazeb, A., Al Mudawi, N., Alonazi, M., Almujally, N. A., Jalal, A., and Liu, H.* (2024).  Computer, Materials & Continua. Tech Science Press.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -259,7 +249,7 @@
 				</td></tr>
 				<tr><td>
 					<img src="images/Highly.png" height="15" class = "pop1"> (top 1%) in Biology & Biochemistry on <img src="images/WoS.png" height="15" class = "pop1"><br>
-					<i>Robust Human Locomotion and Localization Activity Recognition over Multisensory.</i> Khan, D., Alonazi, M., Abdelhaq, M.*, Mudawi, N. A., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Physiology, 15:1344887.<br>
+					<i>Robust Human Locomotion and Localization Activity Recognition over Multisensory.</i> Khan, D., Alonazi, M., Abdelhaq, M.*, Al Mudawi, N., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Physiology, 15:1344887.<br>
 					<a href="https://scholar.google.de/scholar?q=Robust+Human+Locomotion+and+Localization+Activity+Recognition+over+Multisensory" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Robust-human-locomotion-and-localization-activity-Khan-Alonazi/bb90b2c6698b935dcc789faab546118be8717927" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/378393968_Robust_human_locomotion_and_localization_activity_recognition_over_multisensory" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -278,7 +268,19 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1038/s41598-024-62990-4" target="_blank" rel="noopener noreferrer">10.1038/s41598-024-62990-4</a>
 				</td></tr>	
 				<tr><td>
-					<i>Innovative Healthcare Solutions: Robust Hand Gesture Recognition of Daily Life Routines Using 1D CNN.</i> Mudawi, N. A., Ansar, H., Alazeb, A., Aljuaid, H., Alqahtani, Y., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Bioengineering and Biotechnology, 12:1401803.<br>
+					<i>A Robust Multimodal Detection: Physical Exercise Monitoring in Long-Term Care Environments.</i> Al Mudawi, N, Batool M., Alazeb A., Alqahtani Y., Almujally, N. A., Algarni A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Bioengineering and Biotechnology, 12:.1398291.<br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;
+					-->
+					<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2024.1398291/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=mudawi2024monitor&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2024.1398291" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2024.1398291</a>
+				</td></tr>
+				<tr><td>
+					<i>Innovative Healthcare Solutions: Robust Hand Gesture Recognition of Daily Life Routines Using 1D CNN.</i> Al Mudawi, N, Ansar, H., Alazeb, A., Aljuaid, H., Alqahtani, Y., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Bioengineering and Biotechnology, 12:1401803.<br>
 					<a href="https://scholar.google.com/scholar?q=Innovative+healthcare+solutions%3A+robust+hand+gesture+recognition+of+daily+life+routines+using+1D+CNN" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Innovative-healthcare-solutions%3A-robust-hand-of-1D-Mudawi-Ansar/6ea62f04e69a0ceb72a0a6bce57fa8f321f476e3" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/382741631_Innovative_healthcare_solutions_robust_hand_gesture_recognition_of_daily_life_routines_using_1D_CNN" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -287,7 +289,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2024.1401803" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2024.1401803</a>
 				</td></tr>
 				<tr><td>
-					<i>Remote Intelligent Perception System for Multi-Object Detection.</i> Alazeb, A., Chughtai, B. R., Mudawi, N. A., Alqahtani, Y., Alonazi, M., Aljuaid, H., Jalal, A.*, and Liu, H.* (2024). Frontiers in Neurorobotics, 18:1398703.<br>
+					<i>Remote Intelligent Perception System for Multi-Object Detection.</i> Alazeb, A., Chughtai, B. R., Al Mudawi, N., Alqahtani, Y., Alonazi, M., Aljuaid, H., Jalal, A.*, and Liu, H.* (2024). Frontiers in Neurorobotics, 18:1398703.<br>
 					<a href="https://scholar.google.com/scholar?q=Remote+intelligent+perception+system+for+multi-object+detection" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Remote-intelligent-perception-system-for-detection-Alazeb-Chughtai/ac27d489678a64b99940afba827eaab3278711fd" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/380720805_Remote_intelligent_perception_system_for_multi-object_detection" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -296,7 +298,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2024.1398703" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2024.1398703</a>
 				</td></tr>
 				<tr><td>
-					<i>Biosensor-Driven IoT Wearables for Accurate Body Motion Tracking and Localization.</i> Almujally, N. A., Khan, D., Mudawi, N. A., Alonazi, M., Alazeb, A., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Sensors 24(10):3032.<br>
+					<i>Biosensor-Driven IoT Wearables for Accurate Body Motion Tracking and Localization.</i> Almujally, N. A., Khan, D., Al Mudawi, N, Alonazi, M., Alazeb, A., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Sensors 24(10):3032.<br>
 					<a href="https://scholar.google.com/scholar?q=Biosensor-Driven+IoT+Wearables+for+Accurate+Body+Motion+Tracking+and+Localization" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Biosensor-Driven-IoT-Wearables-for-Accurate-Body-Almujally-Khan/ed94ce0e09d14206f87f1c86433e793c0a383659" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/380552972_Biosensor-Driven_IoT_Wearables_for_Accurate_Body_Motion_Tracking_and_Localization" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -305,7 +307,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/s24103032" target="_blank" rel="noopener noreferrer">10.3390/s24103032</a>
 				</td></tr>
 				<tr><td>
-					<i>Enhanced Data Mining and Visualization of Sensory-Graph-Modeled Datasets through Summarization.</i> Hashmi, S. J., Alabdullah, B., Mudawi, N. A., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Sensors, 24(14):4554.<br>
+					<i>Enhanced Data Mining and Visualization of Sensory-Graph-Modeled Datasets through Summarization.</i> Hashmi, S. J., Alabdullah, B., Al Mudawi, N., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Sensors, 24(14):4554.<br>
 					<a href="https://scholar.google.com/scholar?q=Enhanced+Data+Mining+and+Visualization+of+Sensory-Graph-Modeled+Datasets+through+Summarization" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Enhanced-Data-Mining-and-Visualization-of-Datasets-Hashmi-Alabdullah/18e0faa9b8fe1aefadbc5cbfd0744e50a88d8715" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/382288996_Enhanced_Data_Mining_and_Visualization_of_Sensory-Graph-Modeled_Datasets_through_Summarization" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
