--- a/research.html
+++ b/research.html
@@ -139,15 +139,16 @@
 			
 				<tr><td><img src="images/Chapter.png" height="25">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/Editorial.png" height="25"></td></tr>
 				<tr><td>
-					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Human Activity Recognition, Monitoring, and Analysis Facilitated by Novel and Widespread Applications of Sensors.</i> Liu, H.*, Gamboa, H., and Schultz, T. (2024). Sensors.<br>
+					<i>Human Activity Recognition, Monitoring, and Analysis Facilitated by Novel and Widespread Applications of Sensors.</i> Liu, H.*, Gamboa, H., and Schultz, T. (2024). Sensors, 24(15):5250.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;
 					-->
+					<a href="https://www.researchgate.net/publication/383117809_Human_Activity_Recognition_Monitoring_and_Analysis_Facilitated_by_Novel_and_Widespread_Applications_of_Sensors" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/1424-8220/24/16/5250" target="_blank" rel="noopener noreferrer"><img src="images/Sensors.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=liu2024sensors_har_editorial&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/s24165250" target="_blank" rel="noopener noreferrer">10.3390/s24165250</a>
 				</td></tr>
 				<tr><td>
 					<i>High-Level Features for Human Activity Recognition and Modeling.</i> Hartmann, Y.*, Liu, H., and Schultz, T. (2023). Biomedical Engineering Systems and Technologies. Springer Nature Switzerland.<br>
@@ -269,13 +270,12 @@
 				</td></tr>	
 				<tr><td>
 					<i>A Robust Multimodal Detection: Physical Exercise Monitoring in Long-Term Care Environments.</i> Al Mudawi, N, Batool M., Alazeb A., Alqahtani Y., Almujally, N. A., Algarni A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Bioengineering and Biotechnology, 12:.1398291.<br>
+					<a href="https://scholar.google.com/scholar?q=A+Robust+Multimodal+Detection%3A+Physical+Exercise+Monitoring+in+Long-Term+Care+Environments" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					<!--
-					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;
 					-->
-					<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2024.1398291/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/382973776_A_robust_multimodal_detection_system_Physical_exercise_monitoring_in_long-term_care_environments" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2024.1398291/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=mudawi2024monitor&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2024.1398291" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2024.1398291</a>
 				</td></tr>
